# youtubedownloading

./: .env  .env.example  .gitignore  README.md  YouTube다운로더_미디어변환기.spec  create_test_docx.py  create_test_pptx.py  git_helper.py  load_env.py  main.py  pyproject.toml  test_conversion.py  test_document.md  test_document_with_table.docx  test_document_with_table.md  test_presentation.md  test_presentation.pptx  유트브다운로더&미디어변환기_v1.py  유트브다운로더&미디어변환기_v2 copy.py  유트브다운로더&미디어변환기_v2.py
